--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "module": "index.ts",
   "type": "module",
   "exports": {
-".": "./index.ts",
-"./types": "./lib/types.ts"
+    ".": "./index.ts",
+    "./types": "./lib/types.ts",
+    "./providers": "./lib/providers/index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "@oslojs/crypto": "^1.0.1",
-    "@oslojs/encoding": "^1.1.0"
+    "@oslojs/encoding": "^1.1.0",
+    "arctic": "^3.5.0"
   }
 }
