Update GitHub Actions workflow to use Bun for dependency management and build process

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
-            - uses: pnpm/action-setup@v4
+            - uses: oven-sh/setup-bun@v2
               with:
-                version: 7
-            - uses: actions/setup-node@v4
-              with:
-                node-version: 20.x
-                cache: "pnpm"
-            - run: pnpm install --frozen-lockfile
-            - run: pnpm run lint && pnpm run build
+                 bun-version: latest
+            - run: bun install --frozen-lockfile
+            - run: bun run lint && bun run build
