Trying to get CI to work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "noEmit": true,
     "outDir": "dist",
     "skipLibCheck": true,
+    "lib": ["ESNext", "ES2022"]
     },
     
     "include": ["lib"],
