--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "noImplicitAny": true,
     "esModuleInterop": true,
     "strictNullChecks": true,
-    "target": "ES2022",
+    "target": "ESNext",
     "moduleResolution": "node",
     "module": "CommonJS",
     "declaration": true,
