--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "noEmit": true,
     "outDir": "dist",
     "skipLibCheck": true,
-    "lib": ["ESNext","ES2022", "DOM"]
+    "lib": ["ESNext","ES2022", "DOM"],
+    "types": ["node"]
     },
     
     "include": ["lib"],
