--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "url": "https://github.com/KalenHermalin/Simple-Auth"
   },
   "exports": {
-    ".": "./lib/index.ts",
-    "./types": "./lib/types.ts",
-    "./providers": "./lib/providers/index.ts"
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./types": {
+      "types": "./dist/types.d.ts"
+    },
+    "./providers": {
+      "import": "./dist/providers/index.mjs",
+      "require": "./dist/providers/index.js",
+      "types": "./dist/providers/index.d.ts"
+    }
   },
   "scripts": {
     "build": "tsup",
     "lint": "tsc"
   },
   "devDependencies": {
-    "@types/node": "^22.13.13",
-    "tsup": "^8.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "tsup": "^8.4.0"
   },
   "dependencies": {
     "@oslojs/encoding": "^1.1.0",
