--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,20 @@
 {
   "compilerOptions": {
-    "strict": true,
-    "noImplicitAny": true,
-    "esModuleInterop": true,
-    "strictNullChecks": true,
-    "target": "ESNext",
-    "moduleResolution": "node",
+    "target": "ES2022",
     "module": "ESNext",
     "declaration": true,
+    "outDir": "./dist",
+    "rootDir": "./lib",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["ESNext","ES2022", "DOM"],
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "strictNullChecks": true,
     "isolatedModules": true,
     "noEmit": true,
-    "outDir": "dist",
-    "skipLibCheck": true,
-    "lib": ["ESNext","ES2022", "DOM"],
     "types": ["node"]
     },
     
