--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
           - uses: oven-sh/setup-bun@v2
             with:
                 bun-version: latest
-          - run: bun install --frozen-lockfile
+          - run: bun install
           - run: bun run lint
     build:
         runs-on: ubuntu-latest
