--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@KalenHermalin/simple-auth",
+  "name": "@kalenhermalin/simple-auth",
   "license": "MIT",
   "version": "0.0.1",
   "description": "A flexible authentication library for various providers",
@@ -16,6 +16,9 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
+  "publishConfig": {
+  "@kalenhermalin:registry": "https://npm.pkg.github.com"
+},
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -51,8 +54,5 @@
   "dependencies": {
     "@oslojs/encoding": "^1.1.0",
     "arctic": "^3.5.0"
-  },
-  "engines": {
-    "node": ">=18"
   }
 }
